Initial Miro Guide search support and a few bug fixes.  Still very early.

--- a/src/Clients/Halie/Halie.csproj
+++ b/src/Clients/Halie/Halie.csproj
@@ -43,9 +43,7 @@
     <Optimize>false</Optimize>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NDesk.DBus">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus" />
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
