--- a/src/Core/Banshee.Services/Banshee.Services.csproj
+++ b/src/Core/Banshee.Services/Banshee.Services.csproj
@@ -49,12 +49,8 @@
     </Reference>
     <Reference Include="Mono.Posix" />
     <Reference Include="MonoPosixHelper" />
-    <Reference Include="NDesk.DBus">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
-    <Reference Include="NDesk.DBus.GLib">
-      <Package>ndesk-dbus-glib-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus" />
+    <Reference Include="NDesk.DBus.GLib" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core">
@@ -68,9 +64,7 @@
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
-    <Reference Include="taglib-sharp">
-      <Package>taglib-sharp</Package>
-    </Reference>
+    <Reference Include="taglib-sharp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\Hyena\Hyena.csproj">
