--- a/src/Extensions/Banshee.MultimediaKeys/Banshee.MultimediaKeys.csproj
+++ b/src/Extensions/Banshee.MultimediaKeys/Banshee.MultimediaKeys.csproj
@@ -54,9 +54,7 @@
     </ProjectReference>
     <Reference Include="Mono.Posix" />
     <Reference Include="MonoPosixHelper" />
-    <Reference Include="NDesk.DBus">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banshee.MultimediaKeys\MultimediaKeysService.cs" />
