--- a/src/Clients/Booter/Booter.csproj
+++ b/src/Clients/Booter/Booter.csproj
@@ -46,9 +46,7 @@
     <Reference Include="Mono.Posix" />
     <Reference Include="MonoPosixHelper" />
     <Reference Include="System" />
-    <Reference Include="NDesk.DBus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f6716e4f9b2ed099">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f6716e4f9b2ed099" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Services\Banshee.Services.csproj">
