--- a/src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea.csproj
+++ b/src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea.csproj
@@ -65,9 +65,7 @@
       <Name>Banshee.Widgets</Name>
     </ProjectReference>
     <Reference Include="atk-sharp" />
-    <Reference Include="NDesk.DBus">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus" />
     <Reference Include="System" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
