--- a/src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue.csproj
+++ b/src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue.csproj
@@ -60,12 +60,8 @@
     <Reference Include="glib-sharp" />
     <Reference Include="Mono.Posix" />
     <Reference Include="MonoPosixHelper" />
-    <Reference Include="NDesk.DBus">
-      <Package>ndesk-dbus-1.0</Package>
-    </Reference>
-    <Reference Include="NDesk.DBus.GLib">
-      <Package>ndesk-dbus-glib-1.0</Package>
-    </Reference>
+    <Reference Include="NDesk.DBus" />
+    <Reference Include="NDesk.DBus.GLib" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
