--- a/src/Extensions/Banshee.Podcasting/Banshee.Podcasting.csproj
+++ b/src/Extensions/Banshee.Podcasting/Banshee.Podcasting.csproj
@@ -76,13 +76,9 @@
     <Reference Include="pango-sharp" />
     <Reference Include="System" />
     <Reference Include="System.Web" />
-    <Reference Include="taglib-sharp">
-      <Package>taglib-sharp</Package>
-    </Reference>
+    <Reference Include="taglib-sharp" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <Reference Include="taglib-sharp, Version=2.0.3.1, Culture=neutral, PublicKeyToken=db62eba44689b5b0">
-      <Package>taglib-sharp</Package>
-    </Reference>
+    <Reference Include="taglib-sharp, Version=2.0.3.1, Culture=neutral, PublicKeyToken=db62eba44689b5b0" />
     <Reference Include="System.Xml" />
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
