Initial scrolling support and Client re-org.  Do not use.

--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -127,7 +127,6 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideChannelListView.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideLoginForm.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideSearchEntry.cs" />
-    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\TestSource.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\TestSourceContents.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\MiroGuideFilterType.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\MiroGuideSortType.cs" />
@@ -140,6 +139,8 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideImageFetchJob.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideSourceManager.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideChannelListModel.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\SearchContext.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\TestSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Core\Banshee.Core.csproj">
