--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -127,7 +127,6 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideChannelListView.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideLoginForm.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideSearchEntry.cs" />
-    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\TestSourceContents.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\MiroGuideFilterType.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\MiroGuideSortType.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\ClientIDChangedEventArgs.cs" />
@@ -137,10 +136,18 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\RequestCompletedEventArgs.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\SubscriptionRequestedEventArgs.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideImageFetchJob.cs" />
-    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideSourceManager.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideChannelListModel.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\SearchContext.cs" />
-    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\TestSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideSourceManager.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\SearchSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\ChannelSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\HDChannelsSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\FeaturedChannelsSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\MiroGuideSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\PopularChannelsSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\TopRatedChannelsSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\ChannelSourceContents.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\MiroGuideSourceContents.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Core\Banshee.Core.csproj">
@@ -180,5 +187,7 @@
     <Folder Include="Banshee.Paas\Banshee.Paas.DownloadManager.Data\" />
     <Folder Include="Banshee.Paas\Banshee.Paas.MiroGuide\" />
     <Folder Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\" />
+    <Folder Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\" />
+    <Folder Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\" />
   </ItemGroup>
 </Project>
