--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\MiroGuideSourceContents.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\MiroGuideSourcePosition.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\BrowseChannelsSource.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\RecommendedChannelsSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Core\Banshee.Core.csproj">
