--- a/src/Extensions/Banshee.Paas/Makefile.am
+++ b/src/Extensions/Banshee.Paas/Makefile.am
@@ -78,11 +78,12 @@ SOURCES =  \
 	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideChannelListView.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideLoginForm.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideSearchEntry.cs \
+	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SortPreferenceActionButton.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SourceContents/ChannelSourceContents.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SourceContents/MiroGuideSourceContents.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideChannelListModel.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideImageFetchJob.cs \
-	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideSourceManager.cs \
+	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideInterfaceManager.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/BrowseChannelsSource.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/ChannelSource.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/FeaturedChannelsSource.cs \
