Refresh 'GetChannels' results.

--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -185,6 +185,7 @@
     <None Include="Resources\GlobalUI.xml" />
     <None Include="Banshee.Paas.addin.xml" />
     <None Include="Resources\MiroGuideUI.xml" />
+    <None Include="Resources\MiroGuideActiveSourceUI.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Banshee.Paas\Banshee.Paas.DownloadManager\" />
