Initial "Browse" implementation.  Rough.

--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -153,6 +153,11 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\Sources\RecommendedChannelsSource.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SortPreferenceActionButton.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SortPreferenceChangedEventArgs.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\MiroGuideCategoryListView.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\MiroGuideCategoryInfo.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\GetCategoriesCompletedEventArgs.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideCategoryListModel.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\BrowserSourceContents.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Core\Banshee.Core.csproj">
