* Only mark newly downloaded item new if not previously streamed. * Vadjustment values are stored between ChannelSourse Sets/Resets.

--- a/src/Extensions/Banshee.Paas/Makefile.am
+++ b/src/Extensions/Banshee.Paas/Makefile.am
@@ -90,6 +90,7 @@ SOURCES =  \
 	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideChannelListModel.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideImageFetchJob.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideInterfaceManager.cs \
+	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideSearchFilter.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/BrowseChannelsSource.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/ChannelSource.cs \
 	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/FeaturedChannelsSource.cs \
