--- a/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
+++ b/src/Extensions/Banshee.Paas/Banshee.Paas.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Banshee.Paas\Banshee.Paas.Aether\MiroGuideClient\GetCategoriesCompletedEventArgs.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideCategoryListModel.cs" />
     <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide.Gui\SourceContents\BrowserSourceContents.cs" />
+    <Compile Include="Banshee.Paas\Banshee.Paas.MiroGuide\MiroGuideSearchFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Banshee.Core\Banshee.Core.csproj">
