[GlobalUIActions] DBus iface for showing dialogs
Added a new DBus interface, org.bansheeproject.Banshee.GlobalUIActions,
used for showing some global dialog boxes, such as import media.

Command line arguments can be used to queue the dialog box to be shown
on first startup (no instance already running) or can be proxied from
the DBus command client to the running instance:

  --show-import-media
  --show-about
  --show-open-location
  --show-preferences

--- a/src/Core/Banshee.ThickClient/Makefile.am
+++ b/src/Core/Banshee.ThickClient/Makefile.am
@@ -113,6 +113,7 @@ SOURCES =  \
 	Banshee.Gui/IClientWindow.cs \
 	Banshee.Gui/IconThemeUtils.cs \
 	Banshee.Gui/IDisableKeybindings.cs \
+	Banshee.Gui/IGlobalUIActions.cs \
 	Banshee.Gui/IHasSourceView.cs \
 	Banshee.Gui/InterfaceActionService.cs \
 	Banshee.Gui/PersistentPaneController.cs \
